--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.3.1</version>
+          <configuration>
+            <nonFilteredFileExtensions>
+              <nonFilteredFileExtension>xcf</nonFilteredFileExtension>
+            </nonFilteredFileExtensions>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
