--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
         <artifactId>json</artifactId>
         <version>20231013</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.6.2</version>
+    </dependency>
 
   </dependencies>
   
