--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,19 @@
               <goals>
                 <goal>shade</goal>
               </goals>
+              <configuration>
+                <minimizeJar>true</minimizeJar>
+                <filters>
+                    <filter>
+                        <artifact>*:*</artifact>
+                        <excludes>
+                            <exclude>META-INF/*.SF</exclude>
+                            <exclude>META-INF/*.DSA</exclude>
+                            <exclude>META-INF/*.RSA</exclude>
+                        </excludes>
+                    </filter>
+                </filters>
+            </configuration>
             </execution>
           </executions>
         </plugin>
